fix: change flex wrap

--- a/src/assets/styles/pages/projects/_projects.scss
+++ b/src/assets/styles/pages/projects/_projects.scss
@@ -1,9 +1,9 @@
 .all-projects__wrapper {
-  @include d-flex(row, center, unset, 48px);
+  @include d-flex(row, center, unset, 48px, wrap);
 
   @include media(1152) {
     flex-direction: column;
-  
+
     .project__card {
       max-width: 100%;
     }
